holiday: some more cleanup and updates
Conflicts:
	overlay/frameworks/base/core/res/res/values/config.xml
	overlay/frameworks/base/core/res/res/xml/storage_list.xml
	ramdisk/init.holiday.rc

Change-Id: I4f5d71fe0c5dc2cc1d546b1eb27305aee80d9ac1

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -13,5 +13,6 @@
     <storage android:mountPoint="/storage/usbdisk"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
-             android:removable="true" />
+             android:removable="true"
+             android:allowMassStorage="true" />
 </StorageList>
