--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -10,4 +10,9 @@
              android:primary="true"
              android:removable="false"
              android:allowMassStorage="true" />
+    <storage android:mountPoint="/storage/usbdisk"
+             android:storageDescription="@string/storage_usb"
+             android:primary="false"
+             android:removable="true"
+             android:allowMassStorage="true" />
 </StorageList>
